--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "mongoose": "^7.6.5",
+    "mongodb": "4.1",
     "nodemon": "^3.1.0"
   }
 }
